<resources>
    <string name="app_name">Template Quiz</string>

    <string name="home_center_text">SPORT QUIZ</string>
    <string name="splash_bottom_text">loading…</string>

    <string name="start_quiz">Start Quiz&#160;&#160;&#160;⟩⟩⟩</string>
    <string name="settings">Settings</string>
    <string name="info">Info</string>
    <string name="exit">Exit</string>

    <string name="back">Back</string>

    <string name="info_title">Game description</string>
    <string name="info_text">Sports games are independent sports associated with the game confrontation of teams or individual athletes and conducted according to certain rules.\n\nAny sports game is characterized by:\n\npresence of rules;\ninteraction with partners;\ncompetitiveness;\nmotor activity;\nsimplicity of content;\nstrong emotional impact.</string>

    <string name="menu">Menu</string>

    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="try_again">Try again</string>

    <string name="congratulations">Congratulations!</string>
    <string name="score_format">Your score: %1$d%%</string>

    <string name="my_answer">My Answer</string>
    <string name="see_my_answer">See my answer</string>
</resources>