<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:background="@drawable/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/info"
            android:adjustViewBounds="true"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_info_title"
            android:text="@string/info"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textAllCaps="true"
            app:fontFamily="@font/termina_test_bold"
            android:paddingVertical="15dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_title"
            android:textSize="24sp"
            android:textColor="@color/white"
            app:fontFamily="@font/termina_test_demi"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_text"
            android:textSize="15sp"
            android:textColor="@color/white"
            app:fontFamily="@font/termina_test_regular"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBack"
            android:layout_width="150dp"
            android:layout_height="56dp"
            android:background="@drawable/bg_btn_menu_secondary"
            android:text="@string/back"
            android:textColor="@color/btns_text_color"
            android:textSize="@dimen/action_button_text_size"
            android:fontFamily="@font/termina_test_demi"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="40dp"
            />

    </LinearLayout>

</RelativeLayout>