<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:background="@drawable/bg"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/result_top_bar"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/congratulations"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    app:fontFamily="@font/termina_test_bold"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score_format"
                    android:textSize="26sp"
                    android:textColor="@color/black"
                    app:fontFamily="@font/termina_test_regular"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_results_answers"
            android:padding="10dp"
            android:layout_marginTop="20dp">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_answer"
                android:textSize="20sp"
                android:textColor="@color/white"
                app:fontFamily="@font/termina_test_demi"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/answersRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="8dp"
                android:overScrollMode="never"
                android:scrollbars="none" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_my_answer"
                android:textSize="20sp"
                android:textColor="@color/white"
                app:fontFamily="@font/termina_test_demi"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/statsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:overScrollMode="never"
            android:nestedScrollingEnabled="false" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnTryAgain"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_menu_secondary"
                android:text="@string/try_again"
                android:textColor="@color/btns_text_color"
                android:textSize="@dimen/home_buttons_text_size"
                android:fontFamily="@font/termina_test_demi"
                android:textAllCaps="false"
                android:gravity="center"
                android:layout_marginEnd="10dp"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnNext"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_menu_primary"
                android:text="@string/next"
                android:textColor="@color/btns_text_color"
                android:textSize="@dimen/home_buttons_text_size"
                android:fontFamily="@font/termina_test_demi"
                android:textAllCaps="false"
                android:gravity="center"
                android:paddingHorizontal="16dp"
                android:layout_marginStart="10dp"
                />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>