<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:background="@drawable/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="30dp">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/splashCenterText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title_text"
            android:textColor="@color/title_left_text_color"
            android:textSize="@dimen/home_title_text_size"
            app:fontFamily="@font/termina_test_heavy"
            android:layout_gravity="center"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="80dp">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnStartQuiz"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/bg_btn_menu_primary"
                android:text="@string/start_quiz"
                android:textColor="@color/btns_text_color"
                android:textSize="@dimen/action_button_text_size"
                android:fontFamily="@font/termina_test_demi"
                android:textAllCaps="false"
                android:gravity="center"
                android:paddingHorizontal="16dp"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSettings"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/bg_btn_menu_secondary"
                android:text="@string/settings"
                android:textColor="@color/btns_text_color"
                android:textSize="@dimen/action_button_text_size"
                android:fontFamily="@font/termina_test_demi"
                android:textAllCaps="false"
                android:gravity="center"
                android:layout_marginTop="20dp"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnInfo"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/bg_btn_menu_secondary"
                android:text="@string/info"
                android:textColor="@color/btns_text_color"
                android:textSize="@dimen/action_button_text_size"
                android:fontFamily="@font/termina_test_demi"
                android:textAllCaps="false"
                android:gravity="center"
                android:layout_marginTop="20dp"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnExit"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/bg_btn_menu_secondary"
                android:text="@string/exit"
                android:textColor="@color/btns_text_color"
                android:textSize="@dimen/action_button_text_size"
                android:fontFamily="@font/termina_test_demi"
                android:textAllCaps="false"
                android:gravity="center"
                android:layout_marginTop="20dp"
                />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>