<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:background="@drawable/bg"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/quizTopBar">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:id="@+id/backIv"
            android:src="@drawable/ic_back"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:padding="5dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"
            app:fontFamily="@font/termina_test_demi"
            android:layout_gravity="center"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTimer"
            android:background="@drawable/bg_time"
            android:text="00:00"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:paddingVertical="7dp"
            android:paddingHorizontal="20dp"
            app:fontFamily="@font/termina_test_demi"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/quizTopBar"
        android:layout_marginTop="20dp">
        <ProgressBar
            android:id="@+id/quizProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleHorizontal"
            android:max="100"
            android:progress="50"
            android:indeterminate="false"
            android:progressTint="@color/progress_color"
            android:progressBackgroundTintMode="screen"
            android:progressBackgroundTint="#F2F2F2"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvQuestionCounter"
            android:text="0/30"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:fontFamily="@font/termina_test_demi"
            android:layout_marginTop="10dp"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/quizImage"
            android:src="@drawable/quiz"
            android:adjustViewBounds="true"
            android:layout_marginTop="20dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvQuestion"
            android:text="Which club lionel\nMessi play for"
            android:textSize="22sp"
            android:textColor="@color/white"
            app:fontFamily="@font/termina_test_bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:textAllCaps="true"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnQuizAnswer1"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/bg_results_answers"
                android:drawableEnd="@drawable/ic_check_default"
                android:drawablePadding="12dp"
                android:fontFamily="@font/termina_test_regular"
                android:gravity="center_vertical|start"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="Inter Miami"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/action_button_text_size"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnQuizAnswer2"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/bg_results_answers"
                android:drawableEnd="@drawable/ic_check_default"
                android:drawablePadding="12dp"
                android:fontFamily="@font/termina_test_regular"
                android:gravity="center_vertical|start"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="Inter Miami"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:textSize="@dimen/action_button_text_size"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnQuizAnswer3"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/bg_results_answers"
                android:drawableEnd="@drawable/ic_check_default"
                android:drawablePadding="12dp"
                android:fontFamily="@font/termina_test_regular"
                android:gravity="center_vertical|start"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="Inter Miami"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:textSize="@dimen/action_button_text_size"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnQuizAnswer4"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/bg_results_answers"
                android:drawableEnd="@drawable/ic_check_default"
                android:drawablePadding="12dp"
                android:fontFamily="@font/termina_test_regular"
                android:gravity="center_vertical|start"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="Inter Miami"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:textSize="@dimen/action_button_text_size"
                />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSkipOrTryAgain"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_menu_secondary"
                android:text="@string/skip"
                android:textColor="@color/btns_text_color"
                android:textSize="@dimen/action_button_text_size"
                android:fontFamily="@font/termina_test_demi"
                android:textAllCaps="false"
                android:gravity="center"
                android:layout_marginEnd="10dp"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnStartQuiz"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_menu_primary"
                android:text="@string/next"
                android:textColor="@color/btns_text_color"
                android:textSize="@dimen/action_button_text_size"
                android:fontFamily="@font/termina_test_demi"
                android:textAllCaps="false"
                android:gravity="center"
                android:paddingHorizontal="16dp"
                android:layout_marginStart="10dp"
                />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>